# ObEngine

./: .all-contributorsrc  .clang-format  .gitignore  .lua-format  .travis.yml  Animation.cpp  Animation.hpp  CHANGELOG.md  CMakeLists.1.txt  CMakeLists.txt  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caster.cpp  Caster.hpp  Character.cpp  Character.hpp  Collisions.cpp  Collisions.hpp  ComplexSprite.hpp  ComplexTransformable.cpp  ComplexTransformable.hpp  Console.cpp  Console.hpp  Cursor.cpp  Cursor.hpp  DataParser.cpp  DataParser.hpp  Dialog.cpp  Dialog.hpp  EditorGrid.cpp  EditorGrid.hpp  Entity.cpp  Entity.hpp  ErrorManager.cpp  ErrorManager.hpp  Functions.cpp  Functions.hpp  GUI.cpp  GUI.hpp  (+48 more)
extlibs/QtQuickSFML/: CMakeLists.txt
extlibs/QtQuickSFML/src/: SFMLImageProvider.cpp  SFMLOffscreen.cpp
extlibs/TGUI/: CMakeLists.txt  newCMakeLists.txt
extlibs/TGUI/src/: Global.cpp
extlibs/android-app-glue/: CMakeLists.txt
extlibs/catch/: CMakeLists.txt
extlibs/cppnet/: CMakeLists.txt  README.md
extlibs/cppnet/src/: http.cpp  ip_address.cpp  json.cpp  log.cpp  packet.cpp  requests.cpp  socket.cpp  socket_impl.hpp  socket_selector.cpp  tcp_listener.cpp  tcp_socket.cpp  udp_socket.cpp  utils.cpp
extlibs/dynamicLinker/: CMakeLists.txt
extlibs/dynamicLinker/src/: dynamicLinker.cpp
extlibs/elzip/: CMakeLists.txt
extlibs/elzip/src/: elzip.cpp  elzip_fs_fallback.cpp  unzipper.cpp  zipper.cpp
extlibs/entt/: CMakeLists.txt
extlibs/fmt/: CMakeLists.txt
extlibs/kaguya/: CMakeLists.txt
extlibs/lua/: CMakeLists.txt
extlibs/lunasvg/: CMakeLists.txt
extlibs/lunasvg/include/: CMakeLists.txt  lunasvg.h
extlibs/lunasvg/source/: lunasvg.cpp
extlibs/platformfolders/: CMakeLists.txt  LICENSE
extlibs/sfe/: CMakeLists.txt
extlibs/sfe/src/: ComplexSprite.cpp  SpannableVertexArray.cpp
extlibs/sol3/: CMakeLists.txt
extlibs/soloud/: CMakeLists.txt
extlibs/spdlog/: CMakeLists.txt
extlibs/vili/: CMakeLists.txt
extlibs/vili-d8/: CMakeLists.txt
extlibs/vili-d8/src/: pattern.inl  templates.cpp  validator.cpp  validator.inl
extlibs/vili-msgpack/: CMakeLists.txt
extlibs/vili-msgpack/src/: msgpack.cpp
extlibs/vili/src/: ArrayNode.cpp  ComplexNode.cpp  ContainerNode.cpp  DataNode.cpp  ErrorHandler.cpp  Functions.cpp  LinkNode.cpp  Node.cpp  NodeIterator.cpp  NodeTemplate.cpp  NodeValidator.inl  Types.cpp  ViliParser.cpp  node.cpp  parser.cpp  types.cpp  utils.cpp  writer.cpp
extlibs/vili2/: CMakeLists.txt
extlibs/vili2/src/: node.cpp  types.cpp  utils.cpp
extlibs/whereami/: CMakeLists.txt
src/Android/: CMakeLists.txt
src/Android/src/: main.cpp
src/Core/: CMakeLists.txt  ObEngineCore.cpp
src/Core/Animation/: Animation.cpp  AnimationGroup.cpp  AnimationValidator.cpp  Animator.cpp  Easing.cpp  Tweening.cpp
src/Core/Audio/: AudioManager.cpp  Music.cpp  Sound.cpp
src/Core/Bindings/: AnimationBindings.cpp  AudioBindings.cpp  BindingTree.cpp  Bindings.cpp  CPPBindings.cpp  CollisionBindings.cpp  ConfigBindings.cpp  DebugBindings.cpp  GraphicsBindings.cpp  InputBindings.cpp  NetworkBindings.cpp  Patches.cpp  SFMLBindings.cpp  SceneBindings.cpp  ScriptBindings.cpp  SoundBindings.cpp  SystemBindings.cpp  TimeBindings.cpp  TransformBindings.cpp  TriggersBindings.cpp  TypesBindings.cpp  UtilsBindings.cpp  ViliBindings.cpp  index.cpp
src/Core/Collision/: CapsuleCollider.cpp  CircleCollider.cpp  Collider.cpp  ColliderComponent.cpp  CollisionSpace.cpp  ComplexPolygonCollider.cpp  PolygonCollider.cpp  PolygonalCollider.cpp  Quadtree.cpp  RectangleCollider.cpp  Trajectory.cpp  TrajectoryNode.cpp
src/Core/Component/: Component.cpp  LuaComponentHandler.cpp
src/Core/Config/: Config.cpp  Version.cpp
src/Core/Debug/: Logger.cpp  Render.cpp
src/Core/Engine/: Engine.cpp  ResourceManager.cpp
src/Core/Entities/: Entity.cpp  SpriteEntity.cpp
src/Core/Event/: CallbackScheduler.cpp  Event.cpp  EventGroup.cpp  EventListener.cpp  EventManager.cpp  EventNamespace.cpp  LuaEvent.cpp
src/Core/Graphics/: Canvas.cpp  Color.cpp  DrawUtils.cpp  LevelSprite.cpp  NinePatch.cpp  PositionTransformers.cpp  Renderable.cpp  ResourceManager.cpp  Shader.cpp  Shapes.cpp  Sprite.cpp  Spritesheet.cpp  Text.cpp  Texture.cpp
src/Core/Input/: InputAction.cpp  InputActionEvent.cpp  InputButton.cpp  InputButtonMonitor.cpp  InputButtonState.cpp  InputCondition.cpp  InputInitializer.cpp  InputManager.cpp  InputSource.cpp  InputSourceGamepad.cpp  InputSourceKeyboard.cpp  InputSourceMouse.cpp  InputType.cpp  KeyList.cpp
src/Core/Network/: Downloader.cpp  Network.cpp  NetworkEventManager.cpp  NetworkHandler.cpp  SimpleTcp.cpp  TcpServer.cpp
src/Core/Scene/: Camera.cpp  NewScene.cpp  Scene.cpp  SceneNode.cpp  TXScene.cpp
src/Core/Script/: GameObject.cpp  GlobalState.cpp  LuaHelpers.cpp  LuaState.cpp  Script.cpp  Scripting.cpp  ViliLuaBridge.cpp
src/Core/Sound/: Music.cpp  Sound.cpp
src/Core/System/: Config.cpp  Cursor.cpp  Loaders.cpp  MountablePath.cpp  Package.cpp  Path.cpp  Plugin.cpp  Project.cpp  Window.cpp  Workspace.cpp
src/Core/Tiles/: Animation.cpp  Layer.cpp  Scene.cpp  Tile.cpp  Tileset.cpp
src/Core/Time/: Chronometer.cpp  FramerateCounter.cpp  FramerateManager.cpp  TimeCheck.cpp  TimeUtils.cpp
src/Core/Transform/: AABB.cpp  Matrix2D.cpp  Movable.cpp  Polygon.cpp  ProtectedUnitVector.cpp  Rect.cpp  Referencial.cpp  Referential.cpp  SceneNode.cpp  UnitBasedObject.cpp  UnitStructures.cpp  UnitVector.cpp  Units.cpp  Vector2.cpp
src/Core/Triggers/: CallbackScheduler.cpp  Trigger.cpp  TriggerDatabase.cpp  TriggerDelay.cpp  TriggerGroup.cpp  TriggerManager.cpp
src/Core/Types/: Global.cpp  Identifiable.cpp  Selectable.cpp  SmartEnum.cpp  Togglable.cpp  UniqueIdentifiable.cpp
src/Core/Utils/: ArgParser.cpp  ExecUtils.cpp  FileUtils.cpp  MathUtils.cpp  StringUtils.cpp  Terminal.cpp  Threading.cpp  VectorUtils.cpp
src/Dev/: CMakeLists.txt  ObEngineDev.cpp  Sol3Test.cpp
src/Dev/Backend/: Backend.cpp  MenuBackend.cpp  (+3 more)
src/Player/: CMakeLists.txt  ObEnginePlayer.cpp
src/Toolkit/: CMakeLists.txt  Toolkit.cpp
tests/: CMakeLists.txt
tests/src/: Tests.cpp
(+2288 files in other folders)
